--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   imageRepository: 'testjuan'
   containerRegistry: 'dockerjuanadevesat.azurecr.io'
   dockerfilePath: '**/client/Dockerfile'
-  tag: '$(Build.BuildId)'
+  tag: 'client-$(Build.BuildId)'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
