--- a/Docker-base-securizado/Dockerfile
+++ b/Docker-base-securizado/Dockerfile
@@ -28,8 +28,6 @@ RUN adduser -s /bin/true -u 1000 -D -h $APP_DIR $APP_USER \
   && chown -R "$APP_USER" "$APP_DIR" "$CONF_DIR" \
   && chmod 700 "$APP_DIR" "$DATA_DIR" "$CONF_DIR"
 
-RUN su $APP_USER
-
 # Remove existing crontabs, if any.
 RUN rm -fr /var/spool/cron \
 	&& rm -fr /etc/crontabs \
@@ -100,6 +98,10 @@ RUN chmod 500 $APP_DIR/post-install.sh
 # default directory is /app
 WORKDIR $APP_DIR
 
-RUN apk update && apk add nodejs=20.10.0-r1 && apk add npm
+RUN apk update 
+
+RUN apk add nodejs=20.9.0
+
+RUN apk add npm
 
 RUN ./post-install.sh
